fixed image overflow on the-course and added footer options page to wordpress admin

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12024,7 +12024,8 @@ ul.ml-auto {
 }
 
 .grid-box {
-  border: 0.75rem solid #fff;
+  outline: 1.25rem solid #fff;
+  outline-offset: -5px;
   height: 100%;
 }
 
@@ -12215,37 +12216,44 @@ footer li {
   .footer-container {
     text-align: center;
     left: 0;
-    margin-bottom: 4rem;
   }
 
+  .footer-col ul {
+    font-size: 0.2rem;
+  }
+
+  .footer-col ul h2 {
+    font-size: 0.2rem;
+  }
+}
+
+@media (max-width: 43.5em) {
   .footer-col {
     margin-bottom: 2rem;
     height: 100%;
-  }
-
-  .footer-col-ul li {
-    font-size: 3rem;
-    line-height: 4.5rem;
-  }
-
-  .footer-col h2 {
-    font-size: 3rem;
   }
 
   .footer-col.mx-6 {
     margin-left: 0 !important;
     margin-right: 0 !important;
   }
+
+  .footer-col ul {
+    font-size: 0.2rem;
+  }
+
+  .footer-col ul h2 {
+    font-size: 0.2rem;
+  }
 }
 
 @media (max-width: 28em) {
-  .footer-col-ul li {
-    font-size: 2rem;
-    line-height: 4.5rem;
+  footer {
+    margin: 3rem 0;
   }
 
-  .footer-col h2 {
-    font-size: 2rem;
+  .footer-col {
+    border: 1px solid #7f6441;
   }
 }
 
@@ -12734,10 +12742,12 @@ footer li {
 
 .greenfees-white-border {
   position: absolute;
+  overflow: hidden;
   top: 0;
   width: 100%;
   height: 100%;
-  border: 0.75rem solid #fff;
+  outline: 1.25rem solid #fff;
+  outline-offset: -5px;
 }
 
 .about .hero {
@@ -12792,6 +12802,10 @@ footer li {
           transform: rotate(90deg);
 }
 
+.course-statistics .table-container {
+  overflow: scroll;
+}
+
 .course-statistics table {
   background-color: #FFFAF1;
   font-size: 1.8rem;
@@ -12821,6 +12835,20 @@ footer li {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+}
+
+@media (max-width: 28em) {
+  .course-statistics h1 {
+    font-size: 1.8rem;
+  }
+
+  .download-pdf h1 {
+    font-size: 2.4rem;
+  }
+
+  .download-pdf p {
+    font-size: 1.2rem;
+  }
 }
 
 .lessons-clinics {
