--- a/sass/pages/_greenfees.scss
+++ b/sass/pages/_greenfees.scss
@@ -7,11 +7,14 @@
     .hero {
         max-height: 600px;
     }
+    
     &-white-border {
         position: absolute;
+        overflow: hidden;
         top: 0;
         width: 100%;
         height: 100%;
-        border: .75rem solid $color-white;
+        outline: 1.25rem solid $color-white;
+        outline-offset: -5px;
     }
 } 
